fix: no overflow in tablet mode

--- a/src/index.css
+++ b/src/index.css
@@ -325,7 +325,7 @@ main {
 
 @media (width <= 1000px) {
   .wrapper {
-    display: flex;
+    display: block;
     overflow-x: hidden;
     overflow-y: scroll;
     max-height: fit-content;
